Update on Overleaf.

--- a/MPItheme/beamercolorthemeMPIGravMixed.sty
+++ b/MPItheme/beamercolorthemeMPIGravMixed.sty
@@ -7,8 +7,9 @@
 
 \definecolor{MPIGreen}{HTML}{007977}
 \definecolor{MPIGravRed}{HTML}{ad0000}
-\definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
+% \definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
 % \definecolor{FontColor}{HTML}{29485d}  % Background color from official Max Planck Powerpoint templates
+\definecolor{FontColor}{rgb}{0.1, 0.1, 0.44}  % Midnightblue
 
 \setbeamercolor{titlelike}{fg=MPIGravRed,bg=MPIGravRed!36}
 \setbeamercolor{headline}{fg=MPIGravRed,bg=MPIGravRed!36}
