--- a/MPItheme/beamerinnerthemeMPI.sty
+++ b/MPItheme/beamerinnerthemeMPI.sty
@@ -84,6 +84,7 @@
         \sectionpage
     \end{frame}%
 }
+% -- This at most. Looks not too bad
 
 % \AtBeginSubsection[]{%
 %     \begin{frame}[plain, noframenumbering]{}
