--- a/MPItheme/gwbar_v1.sty
+++ b/MPItheme/gwbar_v1.sty
@@ -107,116 +107,10 @@
 % TODO: potentially remove them too
 
 
-\newcommand{\gwbar@gettikzpicture}{%
-    \begin{tikzpicture}[
-        remember picture,
-        overlay,
-        shift={($(current page.north west)+(0pt,\gwbar@yshiftpicture)$)},
-    ]%
-        % -- NOTE: order in this picture matters for color and overlay etc
-        % -- (which is why we often have part one and two). Also, spaces don't
-        % -- matter in tikzpictures, so at least no issues with that.
 
+\ifthenelse{\equal{\gwbar@declaretitlebox}{true}}{
 
-        % -- Get maximum linewidth of stuff, so that covering works properly.
-        % -- NOTE: setlength alone does not work because scope is local. To set
-        % -- globally, in a way compatible with the calc package, we need some extras.
-        % -- Cf. https://tex.stackexchange.com/questions/119730/global-scope-or-permanent-length-or-savebox
-        \begin{scope}[gwbar@linelayerone]
-            \setlength{\gwbar@linelayerone@linewidth}{\pgflinewidth}
-            \global\gwbar@linelayerone@linewidth=\gwbar@linelayerone@linewidth
-        \end{scope}
-        \begin{scope}[gwbar@linelayertwo]
-            \setlength{\gwbar@linelayertwo@linewidth}{\pgflinewidth}
-            \global\gwbar@linelayertwo@linewidth=\gwbar@linelayertwo@linewidth
-        \end{scope}
-        % NOTE: \pgfkeysifdefined would not work if value is thick, we need numerical value
-        \pgfmathsetmacro{\gwbar@maxlinewidth}{max(\gwbar@linelayerone@linewidth, \gwbar@linelayertwo@linewidth)}
-        \setlength{\gwbar@linewidthshift}{\gwbar@maxlinewidth pt + \gwbar@maxlinewidth pt}  % Take double as safety bed
-
-
-        % % -- Account for linewidth in fitting of heights
-        % \ifthenelse{\equal{\gwbar@signalheight@given}{"frametitleheight"}}{
-        %     \addtolength{\gwbar@signalheight}{-\gwbar@maxlinewidth pt}
-        %     % \addtolength{\gwbar@signalheight}{-\gwbar@linewidthshift}
-        % }{
-        %     \ifthenelse{\equal{\gwbar@signalheight@given}{"framesubtitleheight"}}{
-        %         \addtolength{\gwbar@signalheight}{-\gwbar@maxlinewidth pt}
-        %         % \addtolength{\gwbar@signalheight}{-\gwbar@linewidthshift}
-        %     }{
-        %         % -- If custom signalheight is given, we don't mess with that
-        %     }
-        % }
-        % TODO: is this still required? I mean we clip, might look strange if we do not account for it...
-
-
-        \ifthenelse{\equal{\gwbar@declaretitlebox}{true}}{
-            \ifx\insertframesubtitle\@empty%
-                % -- Important in case where signalupshift is non-zero (and if no framesubtitle is set)
-                \ifdim\gwbar@signalupshift=0pt
-                \else
-                    \draw[
-                        gwbar@fillinglayer,
-                        shift={(0, -\gwbar@frametitleheight + \gwbar@frametitleheightnosubtitle)},
-                    ] (0, 0) rectangle (\paperwidth, \gwbar@signalupshift);
-                \fi
-            \fi
-        }{}
-
-
-        % -- Order matters, first one is supposed to serve as background
-        % -- signal (if a background signal is given).
-        \begin{scope}[
-            gwbar@linelayertwo,
-            x=\gwbar@signalwidth,
-            y=\gwbar@signalheight,
-            shift={(\gwbar@leftpadding, \gwbar@signalupshift)},  % Shifting here is important for clipping to work
-        ]
-            \ifthenelse{\equal{\gwbar@backgroundtemplatefilename}{"none"}}{
-                \clip ({(\gwbar@signalwidth + \gwbar@rightpadding) * \insertframenumber / \inserttotalframenumber}, -1) rectangle ({\gwbar@signalwidth + \gwbar@rightpadding}, 1);
-                
-                \draw[
-                ] plot file {\gwbar@templatefilename};
-            }{
-                \draw[
-                ] plot file {\gwbar@backgroundtemplatefilename};
-            }
-        
-            \draw[
-                shift={(-\gwbar@leftpadding, 0pt)},
-            ] ({\paperwidth - \gwbar@rightpadding}, 0) -- (\paperwidth, 0);
-        \end{scope}
-        
-        % -- Plot part of signal that is visible for current progress
-        \begin{scope}[
-            gwbar@linelayerone,
-            shift={(0pt, \gwbar@signalupshift)},
-        ]
-            \draw[
-            ] (0, 0) -- (\gwbar@leftpadding, 0);
-            
-            \begin{scope}[
-                x=\gwbar@signalwidth,%+\gwbar@rightpadding,
-                y=\gwbar@signalheight,
-                shift={(\gwbar@leftpadding, 0pt)},  % Shifting here is important for clipping to work
-            ]
-                \clip (0, -1) rectangle ({(\gwbar@signalwidth + \gwbar@rightpadding) * \insertframenumber / \inserttotalframenumber}, 1);
-                
-                \draw[
-                ] plot file {\gwbar@templatefilename};
-            
-            \draw[
-                shift={(-\gwbar@leftpadding, 0pt)},
-            ] ({\paperwidth - \gwbar@rightpadding}, 0) -- (\paperwidth, 0);
-            \end{scope}
-        \end{scope}
-    \end{tikzpicture}%
-}
-
-
-\newcommand{\drawgwbar}{%
-% 
-\ifthenelse{\equal{\gwbar@declaretitlebox}{true}}{%
+\defbeamertemplate{frametitle}{gwbar}{%
     % -- Box measurements first
     % -- NOTE: not having blank lines is important for spacing reasons.
     % -- Always put a comment in.
@@ -304,7 +198,107 @@
     }%
     % 
     % 
-    \gwbar@gettikzpicture{}%
+    \begin{tikzpicture}[
+        remember picture,
+        overlay,
+        shift={($(current page.north west)+(0pt,\gwbar@yshiftpicture)$)},
+    ]
+        % -- NOTE: order in this picture matters for color and overlay etc
+        % -- (which is why we often have part one and two). Also, spaces don't
+        % -- matter in tikzpictures, so at least no issues with that.
+
+
+        % -- Get maximum linewidth of stuff, so that covering works properly.
+        % -- NOTE: setlength alone does not work because scope is local. To set
+        % -- globally, in a way compatible with the calc package, we need some extras.
+        % -- Cf. https://tex.stackexchange.com/questions/119730/global-scope-or-permanent-length-or-savebox
+        % \begin{scope}[gwbar@linelayerone]
+        %     \setlength{\gwbar@linelayerone@linewidth}{\pgflinewidth}
+        %     \global\gwbar@linelayerone@linewidth=\gwbar@linelayerone@linewidth
+        % \end{scope}
+        % \begin{scope}[gwbar@linelayertwo]
+        %     \setlength{\gwbar@linelayertwo@linewidth}{\pgflinewidth}
+        %     \global\gwbar@linelayertwo@linewidth=\gwbar@linelayertwo@linewidth
+        % \end{scope}
+        % % NOTE: \pgfkeysifdefined would not work if value is thick, we need numerical value
+        % \pgfmathsetmacro{\gwbar@maxlinewidth}{max(\gwbar@linelayerone@linewidth, \gwbar@linelayertwo@linewidth)}
+        % \setlength{\gwbar@linewidthshift}{\gwbar@maxlinewidth pt + \gwbar@maxlinewidth pt}  % Take double as safety bed
+
+
+        % % -- Account for linewidth in fitting of heights
+        % \ifthenelse{\equal{\gwbar@signalheight@given}{"frametitleheight"}}{
+        %     \addtolength{\gwbar@signalheight}{-\gwbar@maxlinewidth pt}
+        %     % \addtolength{\gwbar@signalheight}{-\gwbar@linewidthshift}
+        % }{
+        %     \ifthenelse{\equal{\gwbar@signalheight@given}{"framesubtitleheight"}}{
+        %         \addtolength{\gwbar@signalheight}{-\gwbar@maxlinewidth pt}
+        %         % \addtolength{\gwbar@signalheight}{-\gwbar@linewidthshift}
+        %     }{
+        %         % -- If custom signalheight is given, we don't mess with that
+        %     }
+        % }
+        % TODO: is this still required? I mean we clip, might look strange if we do not account for it...
+
+
+        \ifx\insertframesubtitle\@empty%
+            % -- Important in case where signalupshift is non-zero (and if no framesubtitle is set)
+            \ifdim\gwbar@signalupshift=0pt
+            \else
+                \draw[
+                    gwbar@fillinglayer,
+                    shift={(0, -\gwbar@frametitleheight + \gwbar@frametitleheightnosubtitle)},
+                ] (0, 0) rectangle (\paperwidth, \gwbar@signalupshift);
+            \fi
+        \fi
+
+
+        % -- Order matters, first one is supposed to serve as background
+        % -- signal (if a background signal is given).
+        \begin{scope}[
+            gwbar@linelayertwo,
+            x=\gwbar@signalwidth,
+            y=\gwbar@signalheight,
+            shift={(\gwbar@leftpadding, \gwbar@signalupshift)},  % Shifting here is important for clipping to work
+        ]
+            \ifthenelse{\equal{\gwbar@backgroundtemplatefilename}{"none"}}{
+                \clip ({(\gwbar@signalwidth + \gwbar@rightpadding) * \insertframenumber / \inserttotalframenumber}, -1) rectangle ({\gwbar@signalwidth + \gwbar@rightpadding}, 1);
+                
+                \draw[
+                ] plot file {\gwbar@templatefilename};
+            }{
+                \draw[
+                ] plot file {\gwbar@backgroundtemplatefilename};
+            }
+        
+            \draw[
+                shift={(-\gwbar@leftpadding, 0pt)},
+            ] ({\paperwidth - \gwbar@rightpadding}, 0) -- (\paperwidth, 0);
+        \end{scope}
+        
+        % -- Plot part of signal that is visible for current progress
+        \begin{scope}[
+            gwbar@linelayerone,
+            shift={(0pt, \gwbar@signalupshift)},
+        ]
+            \draw[
+            ] (0, 0) -- (\gwbar@leftpadding, 0);
+            
+            \begin{scope}[
+                x=\gwbar@signalwidth,%+\gwbar@rightpadding,
+                y=\gwbar@signalheight,
+                shift={(\gwbar@leftpadding, 0pt)},  % Shifting here is important for clipping to work
+            ]
+                \clip (0, -1) rectangle ({(\gwbar@signalwidth + \gwbar@rightpadding) * \insertframenumber / \inserttotalframenumber}, 1);
+                
+                \draw[
+                ] plot file {\gwbar@templatefilename};
+            
+            \draw[
+                shift={(-\gwbar@leftpadding, 0pt)},
+            ] ({\paperwidth - \gwbar@rightpadding}, 0) -- (\paperwidth, 0);
+            \end{scope}
+        \end{scope}
+    \end{tikzpicture}%
     % 
     % -- Account for some of the offset, while not pushing into the signal
     \vspace*{-\gwbar@signalupshift}% TODO: decide whether this helps
@@ -314,34 +308,75 @@
     \else%
         \vspace*{\gwbar@bottompadding@withsubtitle}%
     \fi%
-% }
+}
 % 
-}{%
+}{
 % 
-    \ifthenelse{\equal{\gwbar@signalheight@given}{"frametitleheight"} \or \equal{\gwbar@signalheight@given}{"framesubtitleheight"}}{%
+    \ifthenelse{\equal{\gwbar@signalheight@given}{"frametitleheight"} \or \equal{\gwbar@signalheight@given}{"framesubtitleheight"}}{
         % -- Use default value of signalheight
-    }{%
-        \setlength{\gwbar@signalheight}{\gwbar@signalheight@given}%
-    }%
-    \setlength{\gwbar@signalwidth}{\paperwidth - \gwbar@leftpadding - \gwbar@rightpadding}%
-    % \setlength{\gwbar@yshiftpicture}{\gwbar@signalupshift}%
-    \setlength{\gwbar@yshiftpicture}{0pt}%
+    }{
+        \setlength{\gwbar@signalheight}{\gwbar@signalheight@given}
+    }
+    \setlength{\gwbar@signalwidth}{\paperwidth - \gwbar@leftpadding - \gwbar@rightpadding}
+    \setlength{\gwbar@yshiftpicture}{\gwbar@signalupshift}
     % -- Could just use signalupshift in options below, but I can see
     % -- already how this leads to issues when I do copy+paste.
-    % 
-    \gwbar@gettikzpicture{}%
-    % }
+
+    \defbeamertemplate{headline}{gwbar}{%
+    \begin{tikzpicture}[
+            remember picture,
+            overlay,
+            shift={($(current page.north west)+(0pt,\gwbar@yshiftpicture)$)},
+        ]
+            % -- Order matters, first one is supposed to serve as
+            % -- background signal (if a background signal is given).
+            \begin{scope}[
+                gwbar@linelayertwo,
+                x=\gwbar@signalwidth,
+                y=\gwbar@signalheight,
+                shift={(\gwbar@leftpadding, 0pt)},  % Shifting here is important for clipping to work
+            ]
+                \ifthenelse{\equal{\gwbar@backgroundtemplatefilename}{"none"}}{
+                    \clip ({(\gwbar@signalwidth + \gwbar@rightpadding) * \insertframenumber / \inserttotalframenumber}, -1) rectangle ({\gwbar@signalwidth + \gwbar@rightpadding}, 1);
+                    
+                    \draw[
+                    ] plot file {\gwbar@templatefilename};
+                }{
+                    \draw[
+                    ] plot file {\gwbar@backgroundtemplatefilename};
+                }
+            
+                \draw[
+                    shift={(-\gwbar@leftpadding, 0pt)},
+                ] ({\paperwidth - \gwbar@rightpadding}, 0) -- (\paperwidth, 0);
+            \end{scope}
+            
+            \begin{scope}[
+                gwbar@linelayerone,
+            ]
+                \draw[
+                ] (0, 0) -- (\gwbar@leftpadding, 0);
+                
+                \begin{scope}[
+                    x=\gwbar@signalwidth,
+                    y=\gwbar@signalheight,
+                    shift={(\gwbar@leftpadding, 0pt)},  % Shifting here is important for clipping to work
+                ]
+                    \clip (0, -1) rectangle ({(\gwbar@signalwidth + \gwbar@rightpadding) * \insertframenumber / \inserttotalframenumber}, 1);
+                    
+                    \draw[
+                    ] plot file {\gwbar@templatefilename};
+                
+                \draw[
+                    shift={(-\gwbar@leftpadding, 0pt)},
+                ] ({\paperwidth - \gwbar@rightpadding}, 0) -- (\paperwidth, 0);
+                \end{scope}
+            \end{scope}
+        
+        \end{tikzpicture}%
+    }
     % 
     % \addtobeamertemplate{title page}{}{%
     %   \setbeamertemplate{headline}{}%
     % }
-}
-}
-
-
-% -- Still define a beamertemplate for more straightforward use
-\ifthenelse{\equal{\gwbar@declaretitlebox}{true}}{
-    \defbeamertemplate{frametitle}{gwbar}{\drawgwbar{}}
-}{
-    \defbeamertemplate{headline}{gwbar}{\drawgwbar{}}
 }
