--- a/main.tex
+++ b/main.tex
@@ -26,9 +26,7 @@
 
 {  % -- Brackets required for temporary settings related to titlepage
 % \setbeamertemplate{headline}{}  % We do not want GW on here -> done by plain already, also disables footline
-% \setbeamertemplate{background}{}
-\setbeamertemplate{background}{\tikz[overlay,remember picture]\node[opacity=0.1] at (current page.center){\includegraphics[height=\paperheight]{logos/waves3.png}};}
-% \setbeamertemplate{background}{\tikz[overlay,remember picture]\node[opacity=0.1,anchor=south east] at (current page.south east){\includegraphics[height=0.5\paperheight,keepaspectratio]{logos/waves3.png}};}
+\setbeamertemplate{background}{}
 \begin{frame}[t, plain, noframenumbering]  % Equivalent to previous line
   \titlepage
 \end{frame}
