--- a/MPItheme/beamercolorthemeMPI.sty
+++ b/MPItheme/beamercolorthemeMPI.sty
@@ -6,14 +6,19 @@
 \RequirePackage{xcolor}
 
 \definecolor{MPIGreen}{HTML}{007977}
-\definecolor{MPIGravRed}{HTML}{ad0000}
+\definecolor{MPIGravDarkRed}{HTML}{ad0000}
+\definecolor{MPIGravLightRed}{HTML}{e0969a}
 \definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
 % \definecolor{FontColor}{HTML}{29485d}  % Background color from official Max Planck Powerpoint templates
+\definecolor{FontColor}{rgb}{0.1, 0.1, 0.44}  % Midnightblue
 
 \setbeamercolor{titlelike}{fg=MPIGreen,bg=MPIGreen!36}
 \setbeamercolor{headline}{fg=MPIGreen,bg=MPIGreen!36}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
+% \setbeamercolor{title page}{fg=MPIGreen,bg=MPIGreen!36}
+% \setbeamercolor{title page}{fg=FontColor,bg=white}  % Creates nice purple on titlepage
+\setbeamercolor{title page}{fg=MPIGreen,bg=FontColor!50}  % Creates nice bluish tone on titlepage
 
 \setbeamercolor{normal text}{fg=FontColor}
 \setbeamercolor{structure}{fg=FontColor}
