--- a/MPItheme/beamercolorthemeMPIGrav.sty
+++ b/MPItheme/beamercolorthemeMPIGrav.sty
@@ -6,24 +6,27 @@
 \RequirePackage{xcolor}
 
 \definecolor{MPIGreen}{HTML}{007977}
-\definecolor{MPIGravRed}{HTML}{ad0000}
+\definecolor{MPIGravDarkRed}{HTML}{ad0000}
+\definecolor{MPIGravLightRed}{HTML}{e0969a}
 \definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
 % \definecolor{FontColor}{HTML}{29485d}  % Background color from official Max Planck Powerpoint templates
+\definecolor{FontColor}{rgb}{0.1, 0.1, 0.44}  % Midnightblue
 
-\setbeamercolor{titlelike}{fg=MPIGravRed,bg=MPIGravRed!36}
-\setbeamercolor{headline}{fg=MPIGravRed,bg=MPIGravRed!36}
+\setbeamercolor{titlelike}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
+\setbeamercolor{headline}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
 \setbeamercolor{footline}{fg=white,bg=}
-\setbeamercolor{background}{fg=MPIGravRed!96,bg=white}
+\setbeamercolor{background}{fg=MPIGravDarkRed!96,bg=white}
+\setbeamercolor{title page}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
 
 \setbeamercolor{normal text}{fg=FontColor}
 \setbeamercolor{structure}{fg=FontColor}
-\setbeamercolor{block title}{fg=MPIGravRed,bg=MPIGravRed!20}
+\setbeamercolor{block title}{fg=MPIGravDarkRed,bg=MPIGravLightRed!50}
 % \setbeamercolor{block body}{fg=black,bg=MPIGravRed!20}
 \setbeamercolor{block body}{fg=black,bg=gray!20}
 
-\setbeamercolor{itemize item}{fg=MPIGravRed}
-\setbeamercolor{itemize subitem}{fg=MPIGravRed}
-\setbeamercolor{itemize subsubitem}{fg=MPIGravRed}
+\setbeamercolor{itemize item}{fg=MPIGravDarkRed}
+\setbeamercolor{itemize subitem}{fg=MPIGravDarkRed}
+\setbeamercolor{itemize subsubitem}{fg=MPIGravDarkRed}
 
-\setbeamercolor{section page}{fg=MPIGravRed, bg=MPIGravRed!36}
-\setbeamercolor{subsection page}{fg=MPIGravRed, bg=MPIGravRed!36}
+\setbeamercolor{section page}{fg=MPIGravDarkRed, bg=MPIGravLightRed}
+\setbeamercolor{subsection page}{fg=MPIGravDarkRed, bg=MPIGravLightRed}
