--- a/MPItheme/beamercolorthemeMPIGravMixed.sty
+++ b/MPItheme/beamercolorthemeMPIGravMixed.sty
@@ -6,19 +6,21 @@
 \RequirePackage{xcolor}
 
 \definecolor{MPIGreen}{HTML}{007977}
-\definecolor{MPIGravRed}{HTML}{ad0000}
+\definecolor{MPIGravDarkRed}{HTML}{ad0000}
+\definecolor{MPIGravLightRed}{HTML}{e0969a}
 % \definecolor{FontColor}{HTML}{003262}  % Taken from Berkeley theme (BerkeleyBlue)
 % \definecolor{FontColor}{HTML}{29485d}  % Background color from official Max Planck Powerpoint templates
 \definecolor{FontColor}{rgb}{0.1, 0.1, 0.44}  % Midnightblue
 
-\setbeamercolor{titlelike}{fg=MPIGravRed,bg=MPIGravRed!36}
-\setbeamercolor{headline}{fg=MPIGravRed,bg=MPIGravRed!36}
+\setbeamercolor{titlelike}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
+\setbeamercolor{headline}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
 \setbeamercolor{footline}{fg=white,bg=}
 \setbeamercolor{background}{fg=MPIGreen,bg=white}
+\setbeamercolor{title page}{fg=MPIGravDarkRed,bg=MPIGravLightRed}
 
 \setbeamercolor{normal text}{fg=FontColor}
 \setbeamercolor{structure}{fg=FontColor}
-% \setbeamercolor{block title}{fg=MPIGravRed,bg=MPIGravRed!20}
+% \setbeamercolor{block title}{fg=MPIGravDarkRed,bg=MPIGravLightRed!50}
 \setbeamercolor{block title}{fg=MPIGreen,bg=MPIGreen!10}
 \setbeamercolor{block body}{fg=black,bg=gray!10}
 
@@ -26,5 +28,5 @@
 \setbeamercolor{itemize subitem}{fg=MPIGreen}
 \setbeamercolor{itemize subsubitem}{fg=MPIGreen}
 
-\setbeamercolor{section page}{fg=MPIGravRed, bg=MPIGravRed!36}
-\setbeamercolor{subsection page}{fg=MPIGravRed, bg=MPIGravRed!36}
+\setbeamercolor{section page}{fg=MPIGravDarkRed, bg=MPIGravLightRed}
+\setbeamercolor{subsection page}{fg=MPIGravDarkRed, bg=MPIGravLightRed}
