Adding background template for Caltechtheme.

--- a/Caltechtheme/beamercolorthemeCaltech.sty
+++ b/Caltechtheme/beamercolorthemeCaltech.sty
@@ -3,6 +3,8 @@
 %
 % Acknowledgements: this theme is a based on the UC Berkeley beamer theme. The file structure, however, follows the DTU template from https://gitlab.gbar.dtu.dk/latex/dtutemplates/-/tree/master/templates/Beamer
 
+
+% -- Source for colors: https://identity.caltech.edu/colors
 \RequirePackage{xcolor}
 
 \definecolor{CaltechOrange}{HTML}{FF6C0C}
