Update on Overleaf.

--- a/MPItheme/beamerinnerthemeMPI.sty
+++ b/MPItheme/beamerinnerthemeMPI.sty
@@ -279,7 +279,7 @@
 
 \def\themeMPI@titlepage@leftskip{0.1\paperwidth}
 
-\defbeamertemplate{title page}{MPI}{%
+\defbeamertemplate{title page}{MPIGrav}{%
     \begin{tikzpicture}[overlay,remember picture]%
         % -- V1
         % \fill[fg!50!bg] (current page.south) -- +(0.25\paperwidth, \paperheight) -- (current page.north east) -- (current page.south east) -- cycle;
@@ -329,7 +329,7 @@
 
 
 % \setbeamertemplate{title page}[BMGroup]
-\setbeamertemplate{title page}[MPI]
+\setbeamertemplate{title page}[MPIGrav]
 
 
 \mode
